finished basic auth logic
